--- a/app/src/main/res/layout/adapter_waterfall.xml
+++ b/app/src/main/res/layout/adapter_waterfall.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:background="@drawable/shape_rectangle6"
     android:orientation="vertical">
@@ -13,10 +13,9 @@
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:src="@drawable/jetpack"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvWaterfallAdapter"
@@ -25,9 +24,9 @@
         android:gravity="center"
         android:text="哈密瓜"
         android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/ivWaterfallAdapter"
+        android:textSize="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textSize="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/ivWaterfallAdapter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
