--- a/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
+++ b/app/src/main/res/layout/widget_scroll_comment_list_layout.xml
@@ -6,35 +6,30 @@
 
     <TextView
         android:id="@+id/tv_banner2"
-        android:layout_width="wrap_content"
+        android:layout_width="56dp"
         android:layout_height="19dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:clickable="true"
-        android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:singleLine="true"
+        android:ellipsize="end"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:maxLines="1"
         android:background="@drawable/shape_recharge_commentlist_second"
         android:gravity="center"
-        android:textColor="#fff8f6"
+        android:textColor="#ffffff"
         android:textSize="11sp" />
 
     <TextView
         android:id="@+id/tv_banner1"
-        android:layout_width="wrap_content"
+        android:layout_width="56dp"
         android:layout_height="19dp"
-        android:layout_centerVertical="true"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:background="@drawable/shape_recharge_commentlist_second"
-        android:clickable="true"
-        android:ellipsize="marquee"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:marqueeRepeatLimit="-1"
-        android:singleLine="true"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:gravity="center"
-        android:textColor="#fff8f6"
+        android:textColor="#ffffff"
         android:textSize="11sp"  />
 
 </RelativeLayout>
