--- a/app/src/main/res/layout/fragment_recharge_waterfall.xml
+++ b/app/src/main/res/layout/fragment_recharge_waterfall.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvComponentsWaterfall"
         android:layout_width="match_parent"
@@ -13,6 +14,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
     />
+
+    <ImageView
+        android:id="@+id/btn_select"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/beans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
 
 
